--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -5,7 +5,6 @@
     >
 
     <data>
-
         <variable
             name="character"
             type="com.reddit.rickmorty.model.dto.CharacterDto"
@@ -13,7 +12,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
@@ -24,13 +23,15 @@
 
         <ImageView
             android:id="@+id/avatar"
-            tools:src="@drawable/ic_launcher_background"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            app:imageSource="@{character.image}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:imageSource="@{character.image}"
+            tools:src="@drawable/ic_launcher_background"
             />
 
         <TextView
