--- a/app/src/main/res/layout/fragment_characters_details.xml
+++ b/app/src/main/res/layout/fragment_characters_details.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="vm"
-            type="com.reddit.rickmorty.ui.CharacterDetailsViewModel"
+            type="com.reddit.rickmorty.ui.details.CharacterDetailsViewModel"
             />
     </data>
 
